# pokemon-type

./: .gitignore  README.md  install  pom.xml  pyproject.toml  run
assets/graphics/: abra.txt  aerodactyl.txt  alakazam.txt  amoonguss.txt  arbok.txt  arcanine.txt  arceus.txt  articuno.txt  bagon.txt  bayleef.txt  beedrill.txt  beldum.txt  bellsprout.txt  blastoise.txt  blaziken.txt  bulbasaur.txt  butterfree.txt  caterpie.txt  celebi.txt  chansey.txt  charizard.txt  charmander.txt  charmeleon.txt  chikorita.txt  clefable.txt  clefairy.txt  cloyster.txt  combusken.txt  corviknight.txt  corvisquire.txt  croconaw.txt  cubone.txt  cyndaquil.txt  darkrai.txt  deoxys.txt  dewgong.txt  dialga.txt  diglett.txt  ditto.txt  dodrio.txt  (+234 more)
data/: moves.json  species.json
saves/: info.txt  save0.json
src/main/java/: module-info.java
src/main/java/pokemonTextBased/: Arena.java  Bag.java  Encounter.java  Fight.java  Game.java  Graphics.java  Location.java  SaveSys.java  Sound.java  TypingPromptRepository.java  User.java
src/main/resources/typing/: sentences.txt  words.txt
src/pkm_tbpe/: main.py
src/pkm_tbpe/engine/: arena.py  bag.py  casino.py  data_manager.py  encounter.py  fight.py  graphics.py  location.py  move.py  party.py  pokemon.py  save_sys.py  sound.py  species.py  trainer.py  typing.py  user.py
